--- a/css/core.css
+++ b/css/core.css
@@ -28,10 +28,15 @@ html,body{
     margin: 0;
     letter-spacing: -0.5px;
 }
+html{
+    overflow: visible;
+}
 
 /*공통*/
 body{
     font-family: NotoSans;
+    overflow-x: hidden;/*가로스크롤 제거*/
+    overflow-y: visible;
 }
 
 ul,ol {
