--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@
 /*인트로 페이지*/
 .intro {
     background-color: #fff;
+    overflow: hidden;
 }
 
 #intro {
@@ -35,6 +36,9 @@
 
 .let {
     display: flex;
+}
+.let li{
+    position: relative;/*이동하기위한 포지션*/
 }
 
 .plus {
@@ -158,7 +162,7 @@
 
 
 
-/***********************************************컨텐츠 영역***********************************************/
+/***********************************************베스트셀러 영역***********************************************/
 #cont1 [class*=col-] {
     /*height: 256px;*/
 }
@@ -176,6 +180,7 @@
 
 /*베스트셀러 슬라이드 속박스*/
 .best_box {/*리스트부모*/
+    z-index: 1;
     position: relative;
     width: 1600px;
     height: 700px;
@@ -185,10 +190,8 @@
     align-content: center;
     top: 55%;
     transform: translateY(-50%);
-
-    
-
 }
+
 
 .best_list {/*ul*/
     position: absolute;
@@ -202,6 +205,7 @@
 
 /*이미지 삽입 영역*/
 .best_list > li {
+
     position: relative;
     width: 14.666%;/*6개기본으로!6등분 마진값 양옆 2%뺐음*/
     margin: 0 1%;
@@ -209,6 +213,12 @@
     background-repeat: no-repeat;
     background-position: top;
     background-size: 100%;/*세로모두보이게 기준!(가로는자동)*/
+}
+
+.best_list li a{
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 .best_list li.best_1 {
@@ -385,7 +395,7 @@ text-align: center;
     position: relative;
 }
 .sns_inbox{
-    
+    z-index: 1;
     width: 1600px;
     height: 100%;
     margin: 0 auto;
@@ -403,6 +413,7 @@ text-align: center;
     display: block;
     padding-top: 18%;
 }
+
 
 .instar_ul{
     position: absolute;
@@ -517,15 +528,22 @@ text-align: center;
 
 
 /*블릿버튼*/
-.link_btn ol{
+/*.link_btn ol{
     display: flex;
     justify-content: space-between;
+}*/
+
+.link_btn a{
+  position: absolute;
+}
+.link_btn .ins_lb{
+    left: 0;
+}
+.link_btn .ins_rb{
+    right: 0;
 }
 
-.link_btn{
-  position: absolute;
-    width: 100%;  
-}
+
 
 .link_btn.instar{
     top: 305px;
